test/libsolidity/syntaxTests/nameAndTypeResolution/storage_variable_initialization_with_incorrect_type_int.sol
contract c {
    uint8 a = 1000;
}
// ----
// TypeError: (27-31): Type int_const 1000 is not implicitly convertible to expected type uint8.
